Center systemmonitor window properly on multi-screen setup

Summary:
Do not force geometry or window hints when opening systemmonitor
This should let it position properly on a multi-monitor setup and reduce interference with user-set KWin preferences

BUG: 368158
BUG: 356706

Reviewers: #plasma_workspaces, aacid, mart

Reviewed By: mart

Subscribers: davidedmundson, sebas, aacid, graesslin, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D3484