systemmonitor/ksystemactivitydialog.h
@@ -47,15 +47,14 @@ class KSystemActivityDialog : public QDialog
         void setFilterText(const QString &filterText);
         QString filterText() const;
 
+        QSize sizeHint() const override;
+
         /** Save the settings if the user presses the ESC key */
         void reject() override;
 
     protected:
         /** Save the settings if the user clicks (x) button on the window */
         void closeEvent(QCloseEvent *event) override;
-
-    private slots:
-        void slotInit();
 
     private:
         void saveDialogSettings();
